Move a lot of stuff to the API project since it makes more sense to be in there. Basically, everything developer-extendable is there now, including registries